--- a/__additionals__/.env
+++ b/__additionals__/.env
@@ -1,6 +1,6 @@
 # DOMAIN 
-DOMAIN_NAME=ealbayra.42.fr
-TITLE= Inception
+DOMAIN_NAME = uakkan.42.fr 
+TITLE = Inception
 
 # CERTIFICATES 
 CERTIFICICATES_OUT = /etc/ssl/certs/inception.crt
@@ -8,9 +8,9 @@ CERTIFICICATES_KEYOUT = /etc/ssl/private/inception.key
 
 # MYSQL SETUP 
 MYSQL_DATABASE_NAME = wordpress 
-MYSQL_USER = ealbayra
+MYSQL_USER = uakkan
 MYSQL_PASSWORD = 123
-MYSQL_EMAIL = ealbayra@42.fr
+MYSQL_EMAIL = uakkan@42.fr
 
 # WORDPRESS 
 WORDPRESS_ADMIN_NAME = bestperson
